# cppbackend

.github/workflows/: main.yml
sprint1/problems/async_server/solution/src/: http_server.cpp  http_server.h  main.cpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  ingredients.h  main.cpp
sprint1/problems/final_task/solution/src/: json_loader.cpp  model.h
sprint1/problems/map_json/: client.html  client.py
sprint1/problems/map_json/solution/src/: json_loader.cpp  main.cpp  request_handler.cpp  request_handler.h
sprint1/problems/radio/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/sum/solution/: main.cpp
sprint1/problems/sync_server/solution/: CMakeLists.txt
sprint1/problems/sync_server/solution/src/: main.cpp
sprint1/samples/tcp-udp/: tcp_client.cpp  tcp_server.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/command_line/solution/src/: app.cpp  json_loader.cpp  model.h  request_handler.cpp  ticker.h
sprint2/problems/game_state/solution/src/: http_server.cpp  json_loader.cpp  main.cpp  model.cpp  model.h  request_handler.h
sprint2/problems/join_game/solution/src/: app.h  http_server.h  logger.h  model.cpp  model.h  request_handler.cpp  request_handler.h
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/move_players/solution/: CMakeLists.txt
sprint2/problems/move_players/solution/src/: app.h  http_server.h  logger.h
sprint2/problems/server_logging/solution/: CMakeLists.txt
sprint2/problems/server_logging/solution/src/: http_server.h  logger.h  main.cpp  request_handler.cpp  request_handler.h
sprint2/problems/static_content/solution/src/: http_server.h  json_loader.h  main.cpp  request_handler.cpp  request_handler.h
sprint2/problems/time_control/solution/src/: app.h  json_loader.cpp  model.h  request_handler.cpp  request_handler.h
sprint3/problems/find_return/solution/: CMakeLists.txt  CMakeLists__.txt  Dockerfile
sprint3/problems/find_return/solution/src/: app.cpp  app.h  model.h  ticker.cpp
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/flamegraph/solution/src/: main.cpp  request_handler.cpp  request_handler.h
sprint3/problems/gather/solution/: CMakeLists.txt
sprint3/problems/gather/solution/src/: collision_detector.cpp
sprint3/problems/gen_objects/solution/: CMakeLists.txt  CMakeLists_.txt  Dockerfile  conanfile.txt
sprint3/problems/gen_objects/solution/src/: app.cpp  boost_includes.h  extra_data.h  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h
sprint3/problems/gen_objects/solution/tests/: loot_generator_tests.cpp  model_testes.cpp
sprint3/problems/htmldecode/solution/src/: htmldecode.cpp
sprint3/problems/htmldecode/solution/tests/: tests.cpp
sprint3/problems/instrumentation/solution/: profile.txt
sprint3/problems/instrumentation/solution/v0/: gmon.out  profile.txt
sprint3/problems/instrumentation/solution/v1/: gmon.out  profile.txt
sprint3/problems/instrumentation/solution/v2/: gmon.out
sprint3/problems/scores/solution/: CMakeLists.txt
sprint3/problems/scores/solution/src/: app.cpp  app.h  extra_data.h  http_server.cpp  json_loader.cpp  logger.h  model.h  request_handler.cpp  request_handler.h
sprint3/problems/scores/solution/tests/: model_testes.cpp
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint3/problems/static_lib/solution/src/: main.cpp  model.h  request_handler.cpp
sprint3/problems/tv/solution/: CMakeLists.txt
sprint3/problems/tv/solution/src/: controller.h  menu.h  tv.h
sprint3/problems/tv/solution/tests/: boost_controller_tests.cpp  boost_tv_tests.cpp  catch_controller_tests.cpp  catch_tv_tests.cpp  google_controller_tests.cpp  google_tv_tests.cpp
sprint3/problems/urldecode/solution/src/: urldecode.cpp
sprint3/problems/urlencode/solution/src/: urlencode.cpp  urlencode.h
sprint3/problems/urlencode/solution/tests/: tests.cpp
sprint3/sampels/leap_year/: CMakeLists.txt
sprint3/sampels/leap_year/tests/: boost_test_main.cpp
sprint4/problems/bookypedia-1/solution/src/: bookypedia.h
sprint4/problems/bookypedia-1/solution/src/app/: use_cases.h  use_cases_impl.cpp  use_cases_impl.h
sprint4/problems/bookypedia-1/solution/src/domain/: author.h  author_fwd.h
sprint4/problems/bookypedia-1/solution/src/postgres/: postgres.cpp  postgres.h
sprint4/problems/bookypedia-1/solution/src/ui/: view.cpp
sprint4/problems/bookypedia-1/solution/tests/: use_case_tests.cpp
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/bookypedia-2/solution/src/: bookypedia.cpp  bookypedia.h  main.cpp
sprint4/problems/bookypedia-2/solution/src/domain/: book.h  (+4 more)
sprint4/problems/bookypedia-2/solution/tests/: use_case_tests.cpp
sprint4/problems/db_of_books/solution/: CMakeLists.txt  conanfile.txt  main.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint4/problems/leave_game/solution/src/: collision_detector.cpp  http_server.cpp  infrastructure.cpp  infrastructure.h  json_loader.cpp  json_loader.h  logger.h  main.cpp  model.h  model_datails.h  model_serialization.h  request_handler.cpp  request_handler.h  ticker.cpp
sprint4/problems/leave_game/solution/src/app/: app.cpp  app.h  connection_pool.h  connection_pool_impl.cpp  connection_pool_impl.h  retiree.cpp  retiree.h  unit_of_work_factory.h  use_cases.h
sprint4/problems/leave_game/solution/src/postgres/: postgres.cpp  postgres.h
sprint4/problems/leave_game/solution/src/util/: tagged_uuid.cpp
sprint4/problems/state_serialization/solution/: CMakeLists.txt  Dockerfile
sprint4/problems/state_serialization/solution/src/: app.cpp  app.h  extra_data.h  game_details.h  http_server.h  infastructure.h  json_loader.cpp  json_loader.h  main.cpp  model.h  model_datails.h  model_serialization.h  request_handler.cpp
sprint4/problems/state_serialization/solution/tests/: collision-detector-tests.cpp  loot_generator_tests.cpp  model_testes.cpp  state-serialization-tests.cpp
(+8 files in other folders)
